# data_structure_and_algorithm

./: .gitignore  424.longest-repeating-character-replacement.cpp  LICENSE  README.md
array/: CMakeLists.txt  README.md
array/leetcode_array/: 118_Pascal_triangle.cpp  119_pascal_triangle_2.cpp  11_container_with_most_water.cpp  121_best_time_buy_and_sell_stock.cpp  122_best_time_buy_sell_stock.cpp  152_maximum_product_subarray.cpp  153_find_minimum_in_rotated_sorted_array.cpp  15_3sum.cpp  162_find_peak_element.cpp  167_two_sum.cpp  167_two_sum_2.cpp  169_Majority_Element.cpp  16_3sum_closest.cpp  189_rotate_array.cpp  18_4sum.cpp  1_two_sum.cpp  200_number_of_islands.cpp  209_minimum_size_sub_array_sum.cpp  209_minimum_size_subarray_sum.cpp  213_house_robber_II.cpp  215_kth_largest_element_in_an_array.cpp  216_combination_sum_3.cpp  217_contains_duplciate.cpp  219_contains_duplicate_2.cpp  220_contains_duplicate_III.cpp  221_maximal_square.cpp  229_majority_element_II.cpp  238_product_of_array_except_self.cpp  240_search_a_2d_matrix_II.cpp  243_shortest_word_distance.cpp  251_flatten_2d_vector.cpp  252_meeting_rooms.cpp  253_meeting_rooms_II.cpp  259_3sum_smaller.cpp  260_single_number_III.cpp  268_missing_number.cpp  26_remove_duplicates_from_sorted_array.cpp  274_H_index.cpp  275_H_index_II.cpp  277_find_the_celebrity.cpp  (+63 more)
array/leetcode_array.xcodeproj/: project.pbxproj
array/src/: 179-largest-number.cpp  281-zigzag-iterator.cpp  284-peeking-iterator.cpp  384-shuffle-an-array.cpp  391-perfect-rectangle.cpp  54-spiral-matrix.cpp  57-insert-interval-II.cpp  57-insert-interval.cpp  59-spiral-matrix-II.cpp  68-text-justification.cpp
backtracking/: CMakeLists.txt
backtracking/leetcode_backtracking/: 131_palindrome_partitioning.cpp  134_gas_station.cpp  17_letter_combinations_of_a_phone_number.cpp  211_design_add_and_search_words_data_structure.cpp  216_combination_sum_3.cpp  22_generate_parentheses.cpp  254_factor_combinations.cpp  320_generalized_abbreviation.cpp  364_nested_list_weight_sum_II.cpp  39_combination_sum.cpp  40_combination_sum_2.cpp  46_permutations.cpp  47_permutations_2.cpp  526_beautiful_arrangement.cpp  77_combinations.cpp  78_subsets.cpp  79_word_search.cpp  89_gray_code.cpp  90_subsets_2.cpp  93_restore_ip_addresses.cpp  main.cpp  palindrome_permutation_2.cpp
backtracking/leetcode_backtracking.xcodeproj/: project.pbxproj
backtracking/src/: 254-factor-combinations.cpp  282-expression-add-operators.cpp  301-remove-invalid-parentheses.cpp  433-minimum-genetic-mutation.cpp  89-gray-code.cpp
binary_search/: CMakeLists.txt
binary_search/binary_search/: 153_find_minimum_in_rotated_sorted_array.cpp  162_find_peak_element.cpp  209_minimum_size_subarray_sum.cpp  240_search_2d_matrix_2.cpp  270_closet_bianry_search_tree_value.cpp  275_h_index_2.cpp  278_first_bad_version.cpp  287_find_the_duplicate_number.cpp  29_divide_two_integers.cpp  33_search_in_rotated_sorted_array.cpp  34_find_first_and_last_position_of_element_in_sorted_array.cpp  367_perfect_square.cpp  374_guess_number_higher_or_lower.cpp  378_kth_smallest_element_in_a_sorted_matrix.cpp  436_find_right_interval.cpp  441_arranging_coins.cpp  454_4sum_2.cpp  475_heaters.cpp  497_random_point_in_non_over_lapping_rectangles.cpp  50_pow_x_n.cpp  528_random_pick_with_weight.cpp  69_sqartx.cpp  74_search_2d_matrix.cpp  81_serach_in_rotated_sorted_array_2.cpp  main.cpp
binary_search/binary_search.xcodeproj/: project.pbxproj
binary_search/src/: 154-find-minimum-in-rotated-sorted-array.cpp  162-find-peak-element.cpp  34-find-first-and-last-position-of-element-in-sorted-array.cpp  363-max-sum-rectangle-no-larger-than-k.cpp  378-kth-smallest-element-in-a-sorted-matrix.cpp  378-kth-smallest-element-in-matrix.cpp  4-median-of-two-sorted-array.cpp  410-split-array-largest-sum.cpp  441-arrange-coins.cpp  441-arranging-coins.cpp  673-longest-lis.cpp  719-find-kth-smallest-pair-distance.cpp
data_representation/: CMakeLists.txt
data_representation/src/: condition_variable.cpp  list.cpp  notify_all.cpp
dynamic_programming/: CMakeLists.txt  main  main.cpp
dynamic_programming/c/: 121_best_time_to_buy_and_to_sell_stock.c  309_best_time_to_buy_and_sell_stock_with_cooldown.c  53_maximum_subarray.c  pascal_triangle.cpp
dynamic_programming/c++/: 121_best_time_to_buy_and_to_sell_stock.cpp  303_range_sum_query.cpp  309_best_time_to_buy_and_sell_stock_with_cooldown.cpp  53_maximum_subarray.cpp  552-student-attendance-record-II.cpp  552-student-attendance-record-II.py  pascal_triangle.cpp
dynamic_programming/leet_Code_Dynamic_Programming/: 120_triangle.cpp  139_word_break.cpp  152_maximum_product_subarray.cpp  198_house_robber.cpp  213_house_robber_2.cpp  221_maximal_square.cpp  256_paint_house.cpp  264_ugly_number_2.cpp  279_perfect_squares.cpp  300_longest_increasing_subsequence.cpp  304_range_sum_query_2d.cpp  309_best_time_to_buy_and_sell_stock_with_cooldown.cpp  322_coin_change.cpp  357_count_numbers_with_unique_digits.cpp  368_largest_divisible_subset.cpp  376_wiggle_subsequence.cpp  392_is_subsequence.cpp  418_sentence_screen_fitting.cpp  467-unique-substrings-in-warparound-string-II.cpp  467_unique_substrings_in_wraparound_string.cpp  494_target_sum.cpp  516_longest_palindromic_subsequence.cpp  518_coin_change_2.cpp  523_continuous_subarray_sum.cpp  576_out_boundary_paths.cpp  62_unique_paths.cpp  63_unique_paths_2.cpp  64_minimum_path_sum.cpp  main.cpp
dynamic_programming/python/: 121_best_time_to_buy_and_to_sell_stock.py  303_range_sum_query.py  309_best_time_to_buy_and_sell_stock_with_cooldown.py  53_maximum_subarray.py  70_climbing_stairs.py  pascal_triangle.py
dynamic_programming/src/: 10-regular-expression-matching.cpp  120-triangle.cpp  121-best-time-to-buy-and-sell-stock.cpp  122-best-time-to-buy-and-sell-stock_ii.cpp  (+73 more)
heap/: 347_top_k_frequent_elements.cpp  355_design_twitter.cpp  451_sort_characters_by_frequency.cpp  480-sliding-window-median.cpp  CMakeLists.txt
monotonic-stack/: CMakeLists.txt
string/: CMakeLists.txt  README.md  main.cpp
two_pointers/: CMakeLists.txt  main  main.cpp
(+660 files in other folders)
